<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity"
    android:background="#000000">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/roboto"
        android:text="My Restaurants"
        android:textColor="@color/colorTextIcons"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/findRestaurantButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="Find Restaurants"
        android:textColor="@color/colorTextIcons" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findRestaurantButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:background="@color/colorTextIcons"
        android:hint="Enter Zip Code"
        android:padding="5dp"
        android:paddingBottom="30dp" />


</RelativeLayout>